# open-food-facts-ndjson-extractor

./: .gitignore  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml  sample_pretty.json
config/: phrase_bank.json  pricing_buckets.json
data/hand-created-examples/: groceries.ndjson
data/sample-data/: clean_products.ndjson
src/off_demo_extract/: describe.py  extract.py  pricing.py
src/off_demo_extract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
