[project]
name = "off-demo-extract"
version = "0.1.0"
description = "Extract a clean NDJSON demo catalog from Open Food Facts JSONL exports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
off-extract = "off_demo_extract.extract:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]